Added gold table Logic

--- a/DLT_Tables.ipynb
+++ b/DLT_Tables.ipynb
@@ -97,6 +97,37 @@
     "        .withColumn(\"processed_date\", current_date().cast(\"string\"))  # Add Processed Date\n",
     "    )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "bfaf721e-3928-4bff-991f-be16ecd5d3b8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "@dlt.table(\n",
+    "    name=\"dev_team_offshore.gold.gold_table\",  #  Explicit schema reference\n",
+    "    comment=\"Gold Table for removing duplicates from Streaming Data\",\n",
+    "    table_properties={\"quality\": \"gold\"},\n",
+    "    partition_cols=[\"load_date\"]\n",
+    ")\n",
+    "def silver_table():\n",
+    "    return (\n",
+    "        dlt.read_stream(\"dev_team_offshore.silver.silver_table\")  # Read from silver Layer\n",
+    "        .dropDuplicates([\"vin\"])  # Remove duplicates based on VIN\n",
+    "        .filter(col(\"price\").isNotNull())  # Remove records with null price\n",
+    "        .filter(col(\"mileage\").isNotNull())  # Remove records with null mileage\n",
+    "        .withColumn(\"processed_date\", current_date().cast(\"string\"))  # Add Processed Date\n",
+    "    )"
+   ]
   }
  ],
  "metadata": {
